--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
       <div class="container">
 
         <a href="#" class="header-logo">
-          <img src="./assets/images/logo/logo.svg" alt="Anon's logo" width="120" height="36">
+          <img src="./assets/images/logo/logo.png" alt="Walls&Floor's logo" width="140" height="110">
         </a>
 
         <div class="header-search-container">
